@@ -4,6 +4,7 @@
 
 * Adding support for movie title
 * Adding settings for disable update check on startup and limited audio conversions
+* Adding #57 after conversion options (thanks to TGMais)
 * Changing no longer need to restart for setting page changes
 * Fixing output name is not regenerated on encoder switch if matching extension
 
